--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "calcinai/php-imagick": "^0.1.2",
         "fruitcake/laravel-cors": "^2.0",
         "laravel/lumen-framework": "^8.3.1",
         "tymon/jwt-auth": "^1.0"
@@ -20,7 +21,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
